fix: Remove overflow-y property from html in global styles

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -34,7 +34,6 @@
 
 @layer utilities {
   html {
-    overflow-y: auto;
     color-scheme: light;
     scroll-padding-top: 100px;
   }
